Migrate restconf-api to JUnit5
Automated conversion, with some hand-editing to ditch hamcrest.

Change-Id: I337912a5ee06d74caf29ab67a351800a9fbae872
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>